working on overflow issues and width issues 4 tabs + when tabs have border-top encountering werid bug with tabs widths changes

--- a/src/packages/modules/editorial-chapters-e5/css/editorial-chapters-e5.scss
+++ b/src/packages/modules/editorial-chapters-e5/css/editorial-chapters-e5.scss
@@ -280,6 +280,8 @@ $windowWidth: 1100;
 
     .label-container {
       /*width: percentage(130/$miniItemWidth);*/
+      width: 100%;
+      overflow: hidden;
       padding: 0 percentage(5/$miniItemWidth) 0 percentage(10/$miniItemWidth);
       top: 0;
     }
